--- a/2 home-page/style.css
+++ b/2 home-page/style.css
@@ -2,24 +2,47 @@
     padding:0;
     margin:0;
 }
+html {
+    /* border: 2px solid blue; */
+    width: 100vw;
+    height: 99vh;
+    position: relative;
+} 
 body{
-    width: 99%;
-    height: 97%;
+    /* border: 2px solid black; */
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
     background-image: linear-gradient(rgba(0,0,50,0.8),rgba(0,0,50,0.8)),url(background_img.jpg);
     background-size:cover;
+    position: relative;
 }
 
 /************heading**************/
+
 .heading{
+    /* border: 2px solid rgb(38, 255, 0); */
+    max-width: 100%;
+    max-height: 99%;
+    /* padding-top:100px; */
+    /* margin-top: 50%; */
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     display: flex;
-    justify-content: space-evenly;
-    padding-top:100px;
-    align-items:center;
+    justify-content: space-between;
+    /* -ms-transform: translate(-50%, -50%); */
+    /* align-items:center; */
+    
+    
+   
 }
 .right{
-    border: 1px solid forestgreen;
-    width: 440px;
-    height: 440px;
+    
+    /* border: 2px solid forestgreen; */
+    min-width: 440px;
+    min-height: 440px;
     background-image: url('scholarship.jpg');
     background-size:cover;
     border-radius: 400px;
@@ -38,6 +61,14 @@ body{
 }
 
 /**********left************/
+.left{ 
+    /* border: 2px solid red; */
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-right: 50px;
+}
 .left p:nth-child(1){
     color: white;
     font-size: 30px;
@@ -54,13 +85,39 @@ body{
     font-style: italic;
 }
 .left button{
-    width: 150px;
-    height: 30px;
-    font-size: 15px;
-    border-radius: 20px;
-    border:2px solid white;
-    background-color:transparent;
-    color:white;
-    margin:20px 0px;
+    position: absolute;
+    right: 10%;
+    bottom: 10%;
+    height: 40px;
+    width: 100px;
+    border-radius: 50px;
+    border: 0;
+    outline: 0;
+    background: #3c00a0;
+    color: #fff;
+    cursor: pointer;
+     
 }
+a {
+    text-decoration: none;
+    color: white;
+}
+
+@media only screen and (max-width: 1024px) {
+    .heading{
+        flex-direction: column-reverse;
+  
+    }
+    .right{
+        
+        bottom: 20px;
+        max-height: 440px;
+        max-width: 440px;
+        margin: auto;
+    }
+    .left button{
+        bottom: 0%;
+    }
+}
+
 
