--- a/2 home-page/style.css
+++ b/2 home-page/style.css
@@ -1,54 +1,73 @@
 *{
     padding:0;
     margin:0;
+    box-sizing: border-box;
+    
 }
-html {
-    /* border: 2px solid blue; */
-    width: 100vw;
-    height: 99vh;
-    position: relative;
+html{
+    border: 2px solid blue; 
+    width: 100%;
+    max-height: 100%; 
+    
+    
 } 
 body{
-    /* border: 2px solid black; */
+   
+    /* border: 2px solid black;  */
+    max-width: 100%;
+    max-height: 100%;
     
-    width: 100%;
-    height: 100%;
     background-image: linear-gradient(rgba(0,0,50,0.8),rgba(0,0,50,0.8)),url(background_img.jpg);
     background-size:cover;
-    position: relative;
+    
 }
 
 /************heading**************/
 
 .heading{
     /* border: 2px solid rgb(38, 255, 0); */
-    max-width: 100%;
-    max-height: 99%;
+    /* background-color: #3c00a0; */
+    max-width: 90%;
+    height: 70%;
+    /* margin: auto; */
+    
     /* padding-top:100px; */
     /* margin-top: 50%; */
-    position: absolute;
+    position: relative;
+    
     top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    left: 50%; 
+    transform: translate(-50% , -50%);
     display: flex;
-    justify-content: space-between;
+    /* justify-content: space-evenly; */
     /* -ms-transform: translate(-50%, -50%); */
-    /* align-items:center; */
+    align-items:center;
+    justify-content:space-evenly;
+    
+   
+    
     
     
    
 }
 .right{
     
-    /* border: 2px solid forestgreen; */
-    min-width: 440px;
-    min-height: 440px;
+    /* border: 5px solid rgb(114, 10, 240);  */
     background-image: url('scholarship.jpg');
+    width: 440px;
+    height: 440px;
+    
     background-size:cover;
-    border-radius: 400px;
-    display: flex;
+    border-radius: 440px;
+    /* display: flex; */
     justify-content: center;
     align-items:center;
+    /* position: absolute; 
+    bottom: 0%;
+    right: 1%; */
+    
+    
+   
 }
 .right::before{
     width: 430px;
@@ -56,37 +75,46 @@ body{
     border:2px solid white;
     content: '';
     position: absolute;
-    border-radius: 430px;
-    padding:10px;
+    border-radius: 440px;
+    /* padding:10px; */
 }
 
 /**********left************/
 .left{ 
-    /* border: 2px solid red; */
-    position: relative;
+    /* border: 2px solid red;  */
+    /* position: absolute;
+    left: 0%; */
+    height: 100%;
+    width: 60%;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding-right: 50px;
+    /* margin-right: 50px; */
 }
 .left p:nth-child(1){
     color: white;
     font-size: 30px;
     letter-spacing: 1px;
     font-style: italic;
+    
 }
 .left h1{
-    font-size: 90px;
+    font-size: 100px;
     color:white;
+    width: auto;
+    /* background-color: blue;  */
+    
+   
 }
 .left p:nth-child(3){
     color: orange;
     font-size: 30px;
     font-style: italic;
+    
 }
 .left button{
-    position: absolute;
-    right: 10%;
+    /* position: relative; */
+ 
     bottom: 10%;
     height: 40px;
     width: 100px;
@@ -103,21 +131,34 @@ a {
     color: white;
 }
 
-@media only screen and (max-width: 1024px) {
+@media only screen and (max-width: 1365px) {
     .heading{
         flex-direction: column-reverse;
-  
+        height: 90%;
+        align-items: start;
     }
     .right{
-        
-        bottom: 20px;
-        max-height: 440px;
-        max-width: 440px;
-        margin: auto;
-    }
-    .left button{
+        position: relative;
+        left: 50%;
+        transform: translateX(-50%);
+       
+    } 
+    .left{
+        position: relative;
         bottom: 0%;
+        height: 50%;
+        left: 50%;
+        transform: translateX(-50%);
+        align-items: center;
     }
 }
-
+@media only screen and (max-width: 817px) {
+    .left h1{
+        font-size: 40px;
+    }
+    .right{
+        width: 300px;
+        height: 300px
+    }
+}
 
